--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+      <footer><center>&copy; <a href="https://sonapraneeth-a.github.io/">Sona Praneeth Akula</a> 2018</center></footer>
   </body>
 </html>
