--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,10 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
       <footer><center>&copy; <a href="https://sonapraneeth-a.github.io/">Sona Praneeth Akula</a> 2018</center></footer>
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-90733014-1', 'auto');
+        ga('send', 'pageview');
+      </script>
   </body>
 </html>
